@@ -21,6 +21,7 @@ OPENSEADRAGON CHANGELOG
 * Arrow key navigation fixed across platforms (#565)
 * Removed textarea element from viewer DOM. Viewer.canvas now handles keyboard navigation (#569)
 * Removed 'position' property from MouseTracker keyDownHandler/keyUpHandler/keyHandler functions (#573)
+* MouseTracker now defaults to tracking on (#558)
 
 1.2.0:
 
